--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet">
   <title>Frontend Mentor | Clock App</title>
  
-  <!-- <link rel="stylesheet" href="./src/scss/main.scss">-->
+  <link rel="stylesheet" href="./src/scss/main.scss">
   <link rel="stylesheet" href="./src/css/main.css">
 </head>
 
@@ -106,7 +106,7 @@
     
   </div>
 -->
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 
 </html>
