--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet">
   <title>Frontend Mentor | Clock App</title>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
  
   <link rel="stylesheet" href="./src/scss/main.scss">
   <link rel="stylesheet" href="./src/css/main.css">
@@ -106,7 +107,7 @@
     
   </div>
 -->
-    <script  src="main.js"></script>
+    <script type="text/babel" src="main.js"></script>
 </body>
 
 </html>
