fixing import issue

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Frontend Mentor | Clock App</title>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
  
-  <link rel="stylesheet" href="./src/scss/main.scss">
+ <!-- <link rel="stylesheet" href="./src/scss/main.scss"> -->
   <link rel="stylesheet" href="./src/css/main.css">
 </head>
 
@@ -107,7 +107,7 @@
     
   </div>
 -->
-    <script type="text/babel" src="main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 
 </html>
