--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     rel="stylesheet">
   <title>Frontend Mentor | Clock App</title>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script src="https://unpkg.com/lodash@4.17.20"></script>
  
  <!-- <link rel="stylesheet" href="./src/scss/main.scss"> -->
   <link rel="stylesheet" href="./src/css/main.css">
