--- a/index.html
+++ b/index.html
@@ -106,6 +106,32 @@
   </div>
 -->
     <script type="module" src="main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/CSSRulePlugin.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/Draggable.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/EaselPlugin.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/MotionPathPlugin.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/PixiPlugin.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/TextPlugin.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/ScrollToPlugin.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/ScrollTrigger.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/EasePack.min.js"></script>
+
+<!--
+CustomEase.min.js is a perk available to people with a free account on GreenSock.com and is not available on a CDN. Download it from your GreenSock account and include it locally like this:
+
+<script src="/[YOUR_DIRECTORY]/CustomEase.min.js"></script>
+
+Sign up for free at GreenSock.com/register.
+-->
+<!--
+CustomBounce.min.js, and CustomWiggle.min.js are Club GreenSock perks which are not available on a CDN. Download them from your GreenSock account and include them locally like this:
+
+<script src="/[YOUR_DIRECTORY]/CustomBounce.min.js"></script>
+<script src="/[YOUR_DIRECTORY]/CustomWiggle.min.js"></script>
+
+Sign up at GreenSock.com/club.
+-->
 </body>
 
 </html>
