--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet">
   <title>Frontend Mentor | Clock App</title>
-  <link rel="stylesheet" href="./src/scss/main.scss">
+  <!--<link rel="stylesheet" href="./src/scss/main.scss">-->
  <link rel="stylesheet" href="./src/css/main.css"> 
 </head>
 
